[package]
name = "chip-8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.23"
device_query = "0.2.8"
rand = "0.8.5"
rodio = "0.16.0"
tui-logger = "0.8"
log = "0.4"
spin_sleep = "0.3.7"